<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    tools:context=".CollapsingToolbarLayout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/xbox">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/xbox_imagen"
                android:scaleType="centerCrop"
                android:src="@drawable/xbox"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolsbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/consola_imagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/redonda"
                android:contentDescription="@string/compra"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.196"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.012" />

            <TextView
                android:id="@+id/compania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serie_x"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/consola_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/consola_imagen"
                app:layout_constraintTop_toTopOf="@+id/consola_imagen"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/consola_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.929"
                app:layout_constraintStart_toEndOf="@+id/consola_imagen"
                app:layout_constraintTop_toTopOf="@+id/consola_imagen"
                app:layout_constraintVertical_bias="0.295" />

            <TextView
                android:id="@+id/informacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/datos"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fecha"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/consola_imagen"
                app:layout_constraintTop_toBottomOf="@+id/consola_imagen"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/logo_compra"
        android:focusable="true"
        android:src="@drawable/compra"
        app:fabSize="normal"
        app:layout_anchor="@id/bar"
        app:layout_anchorGravity="end|bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>